spacing fixes

--- a/src/components/main/compose/messages/styles.scss
+++ b/src/components/main/compose/messages/styles.scss
@@ -4,15 +4,13 @@
   display: inline-flex;
   flex-direction: column-reverse;
   height: 100%;
-  max-width: calc(100vw - 330px - 2rem);
   min-width: 300px;
   overflow-x: hidden;
   overflow-y: scroll;
   padding: 0 1rem;
   padding-right: calc(1rem - 10px);
-  margin-right: 5px;
   position: relative;
-  width: calc(100% - 2rem);
+  width: 100%;
   padding-bottom: 1rem;
 
   &:hover {
