--- a/src/components/main/friends/styles.scss
+++ b/src/components/main/friends/styles.scss
@@ -22,7 +22,7 @@
     min-height: 0;
     display: inline-flex;
     padding: 0.5rem 1rem;
-    width: calc(100% - 2rem);
+    width: 100%;
     flex-direction: row;
     border-bottom: 1px solid var(--theme-borders);
 
